scode/Hammes/prob16/error.txt
main.c: In function 'main':
main.c:5:13: error: expected ';' before '}' token
    5 |     return 0
      |             ^
      |             ;
    6 | }
      | ~            
